# school-setup

./: .tmux
example-setup/courses/course-01/: info.yaml
lesson-manager/src/: rofi_courses.py
lesson-manager/utils/: get_week.py
rust-rewrite/: .nvim-dap.lua  Cargo.toml
rust-rewrite/src/: config.rs  main.rs
rust-rewrite/src/core/: assignments.rs  courses.rs  mod.rs  notes.rs
rust-rewrite/src/rofi/: message.rs  mod.rs  select.rs
rust-rewrite/src/utils/: assignments.rs  load_yaml_file.rs  mod.rs  parser.rs
