[package]
name = "rust-rewrite"
version = "0.1.0"
edition = "2024"

[dependencies]
argparse = "0.2.2"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.2"
yaml-rust = "0.4.5"
